# vk-bootstrap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  conanfile.py  conanfile_rtc.py
.github/workflows/: ci_build.yml  create_tag.yml  run_autogen.yml
docs/: getting_started.md
example/: CMakeLists.txt  basic_usage.cpp  custom_debug_callback.cpp  example_config.h.in  shared_library_test.cpp  shared_library_usage.cpp  shared_library_usage.h  simple_compute.cpp  system_info.cpp  triangle.cpp
example/shaders/: frag.spv  simple_compute.comp  simple_compute.comp.spv  triangle.vert  triangle.vert.spv
ext/: CMakeLists.txt
script/: generate_dispatch.py  generate_features_chain.py
src/: Device.cpp  Device.h  Instance.cpp  Instance.h  Swapchain.cpp  Swapchain.h  Util.h  VkBootstrap.cpp  VkBootstrap.h  VkBootstrapDispatch.h  VkBootstrapFeatureChain.h  VkBootstrapFeatureChain.inl  VkDispatchTable.h  VkPipelineBuilder.h  VkSwapchainManager.h  VulkanFeatureConfig.h
tests/: CMakeLists.txt  bootstrap_tests.cpp  common.h  error_code_tests.cpp  feature_config.cpp  include_checks.cpp  run_tests.cpp  test.cpp  triangle.cpp  unit_tests.cpp  vulkan_hpp_tests.cpp  vulkan_library_loader.hpp  vulkan_mock.cpp  vulkan_mock.def  vulkan_mock.hpp  vulkan_mock_setup.cpp  vulkan_mock_setup.hpp
tests/integration/: CMakeLists.txt  integration_test.cpp
tests/shaders/: frag.glsl  vert.spv
